Fixed layout of toggle button and made spacing consistent for both toggle buttons - (personal note - look into css reset)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,11 +6,17 @@ body {
 #root {
   width: 100%;
   height: 100%;
-  text-align: center;
 }
 
 .app-container{
+  display: flex;
   height: inherit;
+}
+
+.mainSbToggle{
+  width: 30px;
+  align-self: flex-start;
+  padding-top: 1rem;
 }
 
 
